scss/_patterns_badge.scss
@import 'settings';

@mixin vf-p-badge {
  %vf-badge {
    @extend %x-small-text;
    background-color: $color-dark;
    border-radius: 1rem;
    box-sizing: content-box;
    color: $color-x-light;
    margin-bottom: 0;
    max-width: 4ch;
    overflow: hidden;
    padding: 0 $spv--x-small;
  }

  .p-badge,
  .p-badge--negative {
    @extend %vf-badge;
  }

  .p-badge--negative {
    background-color: $color-negative;
  }

  .p-chip,
  .p-chip--positive,
  .p-chip--caution,
  .p-chip--negative,
  .p-chip--information {
    .p-badge,
    .p-badge--negative {
      margin-right: 0.05rem;
    }
  }
}

